fix: 修复surface overflow的问题

--- a/src/surface/app/style.less
+++ b/src/surface/app/style.less
@@ -8,7 +8,7 @@
     top            : 0px;
     left           : 0px;
     z-index        : 1;
-    overflow       : hidden;
+    // overflow       : hidden;
 
 
     &-content {
